PW Small change to custom webpage in both master.odb and the file odb/custom/custom.html

--- a/analyzer/odb/custom/custom.html
+++ b/analyzer/odb/custom/custom.html
@@ -16,6 +16,8 @@
 
 <input type=hidden name="redir" value="DetectorBankMap">
 
+<h3><font color="red">To initialize empty entries go to /Analyzer/WireMap via the ODB button</font><h3>
+
 <table border="6" width="640">
 <tr>
 <th align="center"><input name="cmd" value="Status" type="submit"></th>
