PW: Added threshold display for CAENs

--- a/analyzer/odb/custom/custom.html
+++ b/analyzer/odb/custom/custom.html
@@ -453,72 +453,121 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[32]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[32]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[32]" edit=0></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch0/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[33]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[33]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[33]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch1/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[34]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[34]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[34]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch2/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[35]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[35]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[35]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch3/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[36]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[36]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[36]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch4/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[37]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[37]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[37]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch5/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[38]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[38]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[38]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch6/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[39]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[39]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[39]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch7/trigger threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[40]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[40]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[40]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 5/Settings/CAEN/Ch00/self_trigger_threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[41]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[41]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[41]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 5/Settings/CAEN/Ch01/self_trigger_threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[42]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[42]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[42]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 5/Settings/CAEN/Ch02/self_trigger_threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[43]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[43]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[43]" edit=0></td>
 <td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"></td>
+<td colspan="2" align="center"><odb src="/Equipment/Crate 5/Settings/CAEN/Ch03/self_trigger_threshhold" edit=1></td>
 </tr>
 <tr>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[44]" edit=1></td>
