Added new wiremap and changed web files

--- a/analyzer/odb/custom/BankMapCAEN.html
+++ b/analyzer/odb/custom/BankMapCAEN.html
@@ -24,6 +24,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center">Detector</td>
 <td colspan="2" align="center">Bank Name</td>
 <td colspan="2" align="center">Sampling Frequency</td>
+<td colspan="2" align="center">Time Shift</td>
 <td colspan="2" align="center">Trigger Polarity</td>
 <td colspan="2" align="center">Pedestal</td>
 <td colspan="2" align="center">Channel Enabled?</td>
@@ -33,6 +34,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[32]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[32]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[32]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[32]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[32]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[32]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch0/Enabled" edit=1></td>
@@ -42,6 +44,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[33]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[33]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[33]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[33]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[33]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[33]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch1/Enabled" edit=1></td>
@@ -51,6 +54,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[34]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[34]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[34]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[34]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[34]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[34]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch2/Enabled" edit=1></td>
@@ -60,6 +64,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[35]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[35]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[35]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[35]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[35]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[35]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch3/Enabled" edit=1></td>
@@ -69,6 +74,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[36]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[36]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[36]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[36]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[36]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[36]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch4/Enabled" edit=1></td>
@@ -78,6 +84,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[37]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[37]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[37]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[37]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[37]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[37]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch5/Enabled" edit=1></td>
@@ -87,6 +94,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[38]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[38]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[38]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[38]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[38]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[38]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch6/Enabled" edit=1></td>
@@ -96,6 +104,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[39]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[39]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[39]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[39]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[39]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[39]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Equipment/Crate 4/Settings/CAEN0/Ch7/Enabled" edit=1></td>
@@ -105,6 +114,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[40]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[40]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[40]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[40]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[40]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[40]" edit=1></td>
 <td colspan="2" align="center"></td>
@@ -114,6 +124,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[41]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[41]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[41]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[41]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[41]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[41]" edit=1></td>
 <td colspan="2" align="center"></td>
@@ -123,6 +134,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[42]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[42]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[42]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[42]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[42]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[42]" edit=1></td>
 <td colspan="2" align="center"></td>
@@ -132,6 +144,7 @@ After switching channels, please edit Detector field.</font><h3>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/DetectorName[43]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/BankName[43]" edit=0></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/SamplingFrequency[43]" edit=0></td>
+<td colspan="2" align="center"><odb src="/Analyzer/WireMap/TimeShift[43]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/TriggerPolarity[43]" edit=1></td>
 <td colspan="2" align="center"><odb src="/Analyzer/WireMap/Pedestal[43]" edit=1></td>
 <td colspan="2" align="center"></td>
