VT: minor change in www/html/index.html

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>AlCap Run 2013 - Run Information and Trend Plots</title>
+<title>AlCap Run 2015a - Run Information and Trend Plots</title>
 </head>
 <frameset cols="220,*">
 <!-- <frameset rows="*,250"> -->
